--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     tools:context=".Fragments.tab3">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="TRACKS FRAGMENT" />
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/online_song_list"
+        />
 
 </FrameLayout>
