--- a/app/src/main/res/layout/online_song_list.xml
+++ b/app/src/main/res/layout/online_song_list.xml
@@ -54,19 +54,20 @@
         app:layout_constraintStart_toStartOf="@id/song_name"
         app:layout_constraintTop_toBottomOf="@id/song_name" />
 
-    <TextView
-        android:id="@+id/ratings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:drawableStart="@drawable/star"
-        android:drawableLeft="@drawable/star"
-        android:drawablePadding="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/black_shade"
-        app:layout_constraintBottom_toBottomOf="@+id/song_artist"
-        app:layout_constraintStart_toEndOf="@+id/song_artist"
-        app:layout_constraintTop_toBottomOf="@+id/song_name" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/ratings"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginLeft="16dp"-->
+<!--        android:drawableStart="@drawable/star"-->
+<!--        android:drawableLeft="@drawable/star"-->
+<!--        android:drawablePadding="4dp"-->
+<!--        android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
+<!--        android:textColor="@color/black_shade"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/song_artist"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/song_artist"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/song_name" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
