--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -28,7 +28,7 @@
             android:paddingRight="4sp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="70dp"
-            tools:listitem="@layout/online_song_list"
+            tools:listitem="@layout/song_list"
             app:layout_constraintTop_toBottomOf="@id/textView"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingEnd="0sp"
