--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="15sp"
+    android:paddingLeft="15sp"
+    android:paddingRight="6sp"
+    android:paddingEnd="6sp"
     android:background="@color/colorWhite"
     tools:context=".Fragments.tab1">
 
