--- a/app/src/main/res/layout/local_tracks.xml
+++ b/app/src/main/res/layout/local_tracks.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="9sp"
         android:paddingRight="4sp"
         android:layout_marginTop="10dp"
-        tools:listitem="@layout/song_list"
+        tools:listitem="@layout/local_list"
         android:paddingEnd="0sp"
         android:paddingStart="15sp" />
 
