--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F0892D</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#F57502</color>
     <color name="colorAccent">#F0892D</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#CCCCCC</color>
     <color name="black_shade">#800C0C0C</color>
     <color name="black_overlay">#66000000</color>
+
+
+    <color name="backgroundColor">#ffff</color>
+    <color name="tectColor">#000</color>
+    <color name="songTimerColor">#484848</color>
 </resources>
