create user dashboard

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/music_three"
+    android:background="#000"
     tools:context=".MainActivity">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:src="@mipmap/headphones"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"/>
 
 
     <androidx.viewpager.widget.ViewPager
