--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhite"
     tools:context=".Fragments.tab3">
     <ProgressBar
@@ -14,6 +15,16 @@
         tools:visibility="visible"
         android:id="@+id/progress_horizontal"/>
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:queryHint="Search songs"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#ededed"
+        android:layout_marginEnd="10dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/localRecyclerView"
         android:layout_width="match_parent"
@@ -22,7 +33,7 @@
         android:paddingLeft="15sp"
         android:paddingRight="6sp"
         android:paddingEnd="6sp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="70dp"
         tools:listitem="@layout/local_list" />
 
 </FrameLayout>
