--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhite"
     tools:context=".Fragments.tab3">
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_margin="16dp"
-        android:visibility="invisible"
-        tools:visibility="visible"
-        android:id="@+id/progress_horizontal"/>
+<!--    <ProgressBar-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:visibility="invisible"-->
+<!--        tools:visibility="visible"-->
+<!--        android:id="@+id/progress_horizontal"/>-->
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:queryHint="Search songs"
-        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="#ededed"
-        android:layout_marginEnd="10dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="Search songs" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/localRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
         android:paddingStart="15sp"
         android:paddingLeft="15sp"
-        android:paddingRight="6sp"
         android:paddingEnd="6sp"
-        android:layout_marginTop="70dp"
+        android:paddingRight="6sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/local_list" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
