--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
     <ImageView
         android:layout_width="wrap_content"
-        android:src="@mipmap/headphones"
+        android:src="@drawable/headphones"
         android:layout_centerInParent="true"
         android:layout_height="wrap_content"/>
 
